@@ -355,7 +355,7 @@ LOCAL_SRC_FILES := $(LOCAL_SRC_FILES) \
 	html/parser/TextViewSourceParser.cpp \
 	html/parser/XSSFilter.cpp \
 	\
-	html/shadow/MediaControls.cpp \
+	html/shadow/MediaControlRootElement.cpp \
 	html/shadow/MeterShadowElement.cpp \
 	html/shadow/ProgressShadowElement.cpp \
 	html/shadow/SliderThumbElement.cpp \
