@@ -1838,8 +1838,8 @@ webcore_sources += \
 	Source/WebCore/html/parser/TextViewSourceParser.h \
 	Source/WebCore/html/parser/XSSFilter.cpp \
 	Source/WebCore/html/parser/XSSFilter.h \
-	Source/WebCore/html/shadow/MediaControls.cpp \
-	Source/WebCore/html/shadow/MediaControls.h \
+	Source/WebCore/html/shadow/MediaControlRootElement.cpp \
+	Source/WebCore/html/shadow/MediaControlRootElement.h \
 	Source/WebCore/html/shadow/MeterShadowElement.cpp \
 	Source/WebCore/html/shadow/MeterShadowElement.h \
 	Source/WebCore/html/shadow/ProgressShadowElement.cpp \
