@@ -42,7 +42,7 @@ namespace WebCore {
 
 class Event;
 class Frame;
-class MediaControls;
+class MediaControlRootElement;
 
 // Must match WebKitSystemInterface.h
 enum MediaControlElementType {
@@ -193,15 +193,15 @@ private:
 
 class MediaControlPanelMuteButtonElement : public MediaControlMuteButtonElement {
 public:
-    static PassRefPtr<MediaControlPanelMuteButtonElement> create(HTMLMediaElement*, MediaControls*);
+    static PassRefPtr<MediaControlPanelMuteButtonElement> create(HTMLMediaElement*, MediaControlRootElement*);
 
 private:
-    MediaControlPanelMuteButtonElement(HTMLMediaElement*, MediaControls*);
+    MediaControlPanelMuteButtonElement(HTMLMediaElement*, MediaControlRootElement*);
 
     virtual void defaultEventHandler(Event*);
     virtual const AtomicString& shadowPseudoId() const;
 
-    MediaControls* m_controls;
+    MediaControlRootElement* m_controls;
 };
 
 // ----------------------------
@@ -325,18 +325,18 @@ private:
 
 class MediaControlTimelineElement : public MediaControlInputElement {
 public:
-    static PassRefPtr<MediaControlTimelineElement> create(HTMLMediaElement*, MediaControls*);
+    static PassRefPtr<MediaControlTimelineElement> create(HTMLMediaElement*, MediaControlRootElement*);
 
     virtual void defaultEventHandler(Event*);
     void setPosition(float);
     void setDuration(float);
 
 private:
-    MediaControlTimelineElement(HTMLMediaElement*, MediaControls*);
+    MediaControlTimelineElement(HTMLMediaElement*, MediaControlRootElement*);
 
     virtual const AtomicString& shadowPseudoId() const;
 
-    MediaControls* m_controls;
+    MediaControlRootElement* m_controls;
 };
 
 // ----------------------------
@@ -359,16 +359,16 @@ private:
 
 class MediaControlFullscreenButtonElement : public MediaControlInputElement {
 public:
-    static PassRefPtr<MediaControlFullscreenButtonElement> create(HTMLMediaElement*, MediaControls*);
+    static PassRefPtr<MediaControlFullscreenButtonElement> create(HTMLMediaElement*, MediaControlRootElement*);
 
     virtual void defaultEventHandler(Event*);
 
 private:
-    MediaControlFullscreenButtonElement(HTMLMediaElement*, MediaControls*);
+    MediaControlFullscreenButtonElement(HTMLMediaElement*, MediaControlRootElement*);
 
     virtual const AtomicString& shadowPseudoId() const;
 
-    MediaControls* m_controls;
+    MediaControlRootElement* m_controls;
 };
 
 // ----------------------------
