@@ -1,3 +1,12 @@
+2011-04-11  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        Reviewed by Eric Carlson.
+
+        Rename MediaControls to MediaControlRootElement.
+        https://bugs.webkit.org/show_bug.cgi?id=58250
+
+        Mechanical move using do-webcore-rename.
+
 2011-04-11  Daniel Cheng  <dcheng@chromium.org>
 
         Reviewed by Dmitry Titov.
